--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ playBtn.addEventListener("click", () => {
     pauseIcon.style.display = "flex";
 
     // Actualizar Media Session al reproducir
-    const currentTitle = trackInfoElement.textContent.replace("🎶 ", "") || "Transmitiendo...";
+    const currentTitle = trackInfoElement.textContent.replace("🎶 ", "") || "AL AIRE";
     updateMediaSession(currentTitle, "La Super Estacion 593", document.querySelector(".disc img").src);
 
   } else {
@@ -587,10 +587,10 @@ playBtn.addEventListener("click", () => {
 
 const trackInfoElement = document.getElementById("track-info");
 function fetchMetadata() {
-  fetch("https://free.miradio.pro/icy?url=https://stream.zeno.fm/s0xcmkiok6zuv")
+  fetch("https://server-dnsxyz.xyz/icy.php?url=https://stream.zeno.fm/s0xcmkiok6zuv")
     .then(res => res.json())
     .then(data => {
-      const title = data.songtitle || data.song || "Transmitiendo...";
+      const title = data.songtitle || data.song || "AL AIRE";
       trackInfoElement.textContent = title;
       fetchArtworkFromiTunes(title);
     })
@@ -707,7 +707,7 @@ function fetchArtworkFromiTunes(title) {
 
 
 
-function updateMediaSession(title = "Transmitiendo...", artist = "LA SUPER ESTACION 593", artworkUrl = "") {
+function updateMediaSession(title = "AL AIRE", artist = "LA SUPER ESTACION 593", artworkUrl = "") {
   if ('mediaSession' in navigator) {
     navigator.mediaSession.metadata = new MediaMetadata({
       title: title,
@@ -790,10 +790,10 @@ function fetchArtworkFromAllSources(title) {
 }
 
 function fetchMetadata() {
-  fetch("https://free.miradio.pro/icy?url=https://stream.zeno.fm/s0xcmkiok6zuv")
+  fetch("https://server-dnsxyz.xyz/icy.php?url=https://stream.zeno.fm/s0xcmkiok6zuv")
     .then(res => res.json())
     .then(data => {
-      const title = data.songtitle || data.song || "Transmitiendo...";
+      const title = data.songtitle || data.song || "AL AIRE";
       trackInfoElement.textContent = title;
       fetchArtworkFromAllSources(title);
     })
