--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ function updateMediaSession(title = "AL AIRE", artist = "LA SUPER ESTACION 593",
 
 </script>
 <div class="social-bar">
-<a href="https://www.facebook.com/share/1A1pqDAG7L/" target="_blank">
+<a href="https://www.facebook.com/share/17G6Fx7yd9/" target="_blank">
 <img alt="Facebook" src="https://cdn-icons-png.flaticon.com/512/733/733547.png"/>
 </a>
 <a href="s="social-bar">
