--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ audio {
 <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.3 3.3 0 000-.9l7.02-4.11A2.99 2.99 0 0018 7.91a3 3 0 10-2.83-2.02L7.91 9.98a3 3 0 100 4.04l7.26 4.15a3 3 0 102.83-1.9z"></path>
 </svg>
 </div>
-<audio id="radio-player" preload="auto" src="AQUI PONER URL ZENO FM" style="display:block; width:1px; height:1px;"></audio>
+<audio id="radio-player" preload="auto" src="https://stream.zeno.fm/s0xcmkiok6zuv" style="display:block; width:1px; height:1px;"></audio>
 
 <div class="background" id="dynamic-bg"></div>
 <div class="blurred-layer" id="blurred-layer"></div>
